yoshimi 1.5.3 rc2

2017-8-17
* Minor correction to CLI vector level.
* CLI now updates most of envelope graph.
  freemode still to do.
* Revised CLI MIDI learn for own context level.
* GUI test reports are now specific to button 2 & 3.
* Set Version 1.5.3 rc2.
* Further small updates to CLI.

2017-8-17 Jesper
* Don't crash when autoconnect "fails" due to preexisting connections.

2017-8-16 Will.
* Doc updates.
* Set Version 1.5.3 rc1.

2017-8-15 Will.
* Updated appdata and moved to metainfo.
* Other doc updates.

2017-8-13 Will + Rob
* GUI DynFilter updates and learns correctly.
* Learn bug sorted properly!
* Code cleanups.
* Doc updates.

2017-8-12 Will
* Added shortform NRPN to shutdown Yoshimi.
  CC 99 & 98 both set to 68 (0x44).
* BugFix: CTRL pressed *after* any mouse click learned.
* Doc updates.

2017-8-11 Will
* Implimented CLI naming of vectors.
* Corrected some CLI help entries.

2017-8-10 Will
* Further improvements to command test list values.
  Hex and Dec shown, and in columns again.
* Expanded CLI DynFilter control to include sys/ins
  but not currently active.

2017-8-9 Will
* Most of DynFilter updates on CLI direct access call.
  Just the filter window itself to do. Difficult :(
* Command test list values now hex and just 2 lines.

2017-8-7 Will
* Part effects now display on CLI direct access call.

2017-8-5 Will
* Master reset no longer needs threadmessage function.
* Further cleanups and doc corrections.
* Started revising sys/ins effects & replacing callbacks.
  This will help make CLI and GUI consistent.

2017-8-4 Will
* Properly integrated all patchset saves.
* Improved patchset load operations & messaging.
* BugFix: segfault if CLI load with garbage filename.
* Fixed regression. LV2 not loading patch sets.
  These are now properly contained, but I forgot to
  update (LV2 only) putalldata :(
* Patched in Jesper's improved Console scroll behavoir.
  New entries now at bottom and always visible unless
  scroll bars moved.

2017-8-3 Will